# theOneGit

./: .gitignore  BOARD.md  README.md  pyproject.toml
docs/: contribute.md
src/theonegit/: __main__.py  action.py  actionClone.py  cmd.py  complete.py  git.py  html.py
