[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theonegit"
version = "0.0.1"
authors = [
  { name="Guillaume Lozenguez", email="guillaume.lozenguez@imt-nord-europe.fr" },
]
description = "A git-project to rule them all"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
readme = "README.md"

[project.scripts]
tog = "theonegit:__main__.commandHandler"

[project.urls]
Homepage = "https://imt-mobisyst.github.io/"
